--- a/human_mdps/CMakeLists.txt
+++ b/human_mdps/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(intention_recognition)
+project(human_mdps)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED roscpp rospy )
+find_package(catkin REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -97,7 +97,7 @@ find_package(catkin REQUIRED roscpp rospy )
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES intention_recognition
+#  LIBRARIES human_mdps
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
@@ -111,28 +111,26 @@ catkin_package(
 # include_directories(include)
 
 ## Declare a C++ library
-# add_library(intention_recognition
-#   src/${PROJECT_NAME}/intention_recognition.cpp
+# add_library(human_mdps
+#   src/${PROJECT_NAME}/human_mdps.cpp
 # )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-# add_dependencies(intention_recognition ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(human_mdps ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-# add_executable(intention_recognition_node src/intention_recognition_node.cpp)
+# add_executable(human_mdps_node src/human_mdps_node.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(intention_recognition_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(human_mdps_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(intention_recognition
-   ${catkin_LIBRARIES}
-    $ENV{MDPLIB_DIR}/libpomdp.a
-    $ENV{IGLIB_DIR}/libIntentionGraph.so
- )
+# target_link_libraries(human_mdps_node
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
@@ -149,7 +147,7 @@ catkin_package(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS intention_recognition intention_recognition_node
+# install(TARGETS human_mdps human_mdps_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -174,7 +172,7 @@ catkin_package(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_intention_recognition.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_human_mdps.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
