--- a/intention_recognition/package.xml
+++ b/intention_recognition/package.xml
@@ -39,6 +39,14 @@
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
+
+  <build_depend>message_runtime</build_depend>
+  <build_depend>situation_assessment_msgs</build_depend>
+  <build_depend>situation_assessment_actions_msgs</build_depend>
+
+  <run_depend>message_runtime</run_depend>
+  <run_depend>situation_assessment_msgs</run_depend>
+  
   <buildtool_depend>catkin</buildtool_depend>
 
 
