--- a/intention_recognition/package.xml
+++ b/intention_recognition/package.xml
@@ -40,14 +40,19 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
 
+  <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>message_runtime</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>situation_assessment_msgs</build_depend>
   <build_depend>situation_assessment_actions_msgs</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>situation_assessment_msgs</run_depend>
-  
-  <buildtool_depend>catkin</buildtool_depend>
+  <run_depend>situation_assessment_actions_msgs</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>rospy</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
