--- a/situation_assessment_actions_msgs/CMakeLists.txt
+++ b/situation_assessment_actions_msgs/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  action_management_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -50,6 +51,8 @@ find_package(catkin REQUIRED COMPONENTS
    FILES
    AgentInference.msg
    IntentionGraphResult.msg
+   ExecutableAgentActions.msg
+   ExecutableActions.msg
  )
 
 ## Generate services in the 'srv' folder
@@ -70,6 +73,7 @@ find_package(catkin REQUIRED COMPONENTS
  generate_messages(
    DEPENDENCIES
    std_msgs
+   action_management_msgs
  )
 
 ################################################
@@ -104,7 +108,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES situation_assessment_actions_msgs
-#  CATKIN_DEPENDS message_generation message_runtime roscpp rospy std_msgs
+   CATKIN_DEPENDS message_generation message_runtime roscpp rospy std_msgs action_management_msgs
 #  DEPENDS system_lib
 )
 
