--- a/action_preconditions_checker/CMakeLists.txt
+++ b/action_preconditions_checker/CMakeLists.txt
@@ -1,28 +1,17 @@
-## check c++11 / c++0x
-include(CheckCXXCompilerFlag)
-check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
-check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-else()
-		message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
-
-
 cmake_minimum_required(VERSION 2.8.3)
-project(human_action_monitor)
+project(action_preconditions_checker)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  action_management_msgs
+  message_runtime
   roscpp
   rospy
-  action_management_msgs
-  common_msgs
+  situation_assessment_actions_msgs
   situation_assessment_msgs
+  common_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -43,10 +32,10 @@ find_package(catkin REQUIRED COMPONENTS
 ## * Let MSG_DEP_SET be the set of packages whose message types you use in
 ##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
 ## * In the file package.xml:
+##   * add a build_depend tag for "message_generation"
 ##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependencies might have been
-##     pulled in transitively but can be declared for certainty nonetheless:
-##     * add a build_depend tag for "message_generation"
+##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
+##     but can be declared for certainty nonetheless:
 ##     * add a run_depend tag for "message_runtime"
 ## * In this file (CMakeLists.txt):
 ##   * add "message_generation" and every package in MSG_DEP_SET to
@@ -82,7 +71,27 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   shary3_msgs#   situation_assessment_msgs
+#   action_management_msgs#   situation_assessment_actions_msgs#   situation_assessment_msgs
+# )
+
+################################################
+## Declare ROS dynamic reconfigure parameters ##
+################################################
+
+## To declare and build dynamic reconfigure parameters within this
+## package, follow these steps:
+## * In the file package.xml:
+##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
+## * In this file (CMakeLists.txt):
+##   * add "dynamic_reconfigure" to
+##     find_package(catkin REQUIRED COMPONENTS ...)
+##   * uncomment the "generate_dynamic_reconfigure_options" section below
+##     and list every .cfg file to be processed
+
+## Generate dynamic reconfigure parameters in the 'cfg' folder
+# generate_dynamic_reconfigure_options(
+#   cfg/DynReconf1.cfg
+#   cfg/DynReconf2.cfg
 # )
 
 ###################################
@@ -96,8 +105,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-#  LIBRARIES human_action_monitor
-  CATKIN_DEPENDS roscpp rospy shary3_msgs situation_assessment_msgs common_msgs action_management_msgs
+#  LIBRARIES action_preconditions_checker
+  CATKIN_DEPENDS action_management_msgs message_runtime roscpp rospy situation_assessment_actions_msgs situation_assessment_msgs common_msgs
 #  DEPENDS system_lib
 )
 
@@ -107,25 +116,32 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
- include_directories(include)
+# include_directories(include)
 include_directories(
+	include
   ${catkin_INCLUDE_DIRS}
 )
 
-## Declare a cpp library
-# add_library(human_action_monitor
-#   src/${PROJECT_NAME}/human_action_monitor.cpp
+## Declare a C++ library
+# add_library(action_preconditions_checker
+#   src/${PROJECT_NAME}/action_preconditions_checker.cpp
 # )
 
-## Declare a cpp executable
- add_executable(human_action_monitor src/action_monitors.cpp src/main.cpp)
+## Add cmake target dependencies of the library
+## as an example, code may need to be generated before libraries
+## either from message generation or dynamic reconfigure
+# add_dependencies(action_preconditions_checker ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-## Add cmake target dependencies of the executable/library
-## as an example, message headers may need to be generated before nodes
-add_dependencies(human_action_monitor common_msgs_generate_messages_cpp  action_management_msgs_generate_messages_cpp situation_assessment_msgs_generate_messages_cpp)
+## Declare a C++ executable
+add_executable(action_preconditions_checker src/main.cpp src/action_preconditions_checkers.cpp)
+
+## Add cmake target dependencies of the executable
+## same as for the library above
+add_dependencies(action_preconditions_checker situation_assessment_msgs_generate_messages_cpp
+situation_assessment_actions_msgs_generate_messages_cpp common_msgs_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(human_action_monitor
+ target_link_libraries(action_preconditions_checker
    ${catkin_LIBRARIES}
  )
 
@@ -144,7 +160,7 @@ add_dependencies(human_action_monitor common_msgs_generate_messages_cpp  action_
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS human_action_monitor human_action_monitor_node
+# install(TARGETS action_preconditions_checker action_preconditions_checker_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -169,7 +185,7 @@ add_dependencies(human_action_monitor common_msgs_generate_messages_cpp  action_
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_human_action_monitor.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_action_preconditions_checker.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
