pick place fill work. Should put distance check for close actions

--- a/human_action_monitor/CMakeLists.txt
+++ b/human_action_monitor/CMakeLists.txt
@@ -23,6 +23,7 @@ find_package(catkin REQUIRED COMPONENTS
   action_management_msgs
   common_msgs
   situation_assessment_msgs
+  supervision_timer
 )
 
 ## System dependencies are found with CMake's conventions
