--- a/situation_assessment_actions_parameters/situation_assessment_actions_parameters.yaml
+++ b/situation_assessment_actions_parameters/situation_assessment_actions_parameters.yaml
@@ -3,7 +3,7 @@ situation_assessment:
   action_monitoring:
     temporal_threshold: 3
     use_database: true
-    trigger_distance: 0.5
+    trigger_distance: 0.2
     actions_to_monitor:
       - pick    
       - place
@@ -55,5 +55,10 @@ situation_assessment:
           #         - cold_day
           #     context_probabilities:
           #         cold_day: 0.7
+    distance_threshold:
+      - 0.8
+      - 1.5
+      - 3
+      - 5
 
 
