--- a/intention_recognition/package.xml
+++ b/intention_recognition/package.xml
@@ -47,12 +47,14 @@
   <build_depend>rospy</build_depend>
   <build_depend>situation_assessment_msgs</build_depend>
   <build_depend>situation_assessment_actions_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>situation_assessment_msgs</run_depend>
   <run_depend>situation_assessment_actions_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>std_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
