--- a/situation_assessment_actions_msgs/CMakeLists.txt
+++ b/situation_assessment_actions_msgs/CMakeLists.txt
@@ -53,6 +53,7 @@ find_package(catkin REQUIRED COMPONENTS
    IntentionGraphResult.msg
    ExecutableAgentActions.msg
    ExecutableActions.msg
+   IntentionProb.msg
  )
 
 ## Generate services in the 'srv' folder
